--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bytes = "1.6.0"
 dashmap = "5.5.3"
 enum_dispatch = "0.3.13"
 futures = { version = "0.3.30", default-features = false }
+lazy_static = "1.4.0"
 thiserror = "1.0.61"
 tokio-util = { version = "0.7.11", features = ["codec"] }
 tracing = "0.1.40"
