--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ enum_dispatch = "0.3.13"
 futures = { version = "0.3.30", default-features = false }
 lazy_static = "1.4.0"
 thiserror = "1.0.61"
+tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
